# agentic-zerodha-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
src/apps/: api_urls.py
src/apps/accounts/: admin.py  models.py
src/apps/accounts/migrations/: 0001_initial.py  0002_userprofile_accounts_us_telegra_0acb54_idx.py
src/apps/agents/: admin.py  models.py  serializers.py  tasks.py  views.py
src/apps/agents/migrations/: 0001_initial.py  (+5 more)
src/apps/approvals/: admin.py  models.py  serializers.py  tasks.py  telegram_views.py  views.py
src/apps/audit/: admin.py  models.py
src/apps/broker_kite/: admin.py  apps.py  models.py
src/apps/core/: admin.py  admin_views.py  views.py
src/apps/core/services/: crypto.py  (+2 more)
src/apps/credentials/: admin.py  models.py  serializers.py  views.py
src/apps/execution/: admin.py  apps.py  models.py  tasks.py
src/apps/market_data/: admin.py  models.py
src/apps/risk/: admin.py  models.py
src/config/: asgi.py  celery.py  urls.py  wsgi.py
src/config/settings/: __init__.py  base.py  prod.py
templates/admin/: base_site.html  index.html  login.html  search_form.html
tests/: test_admin_control_tower.py  test_agent_analysis_api.py  test_agent_analysis_history_api.py  test_analysis_webhook_notifications.py  test_approval_hooks.py  test_approval_orchestrator_notifications.py  test_approval_queue_and_timeout.py  test_credentials_api.py  test_health.py  test_multi_approver_policy.py  test_seed_demo_data_command.py  test_telegram_commands.py  test_telegram_webhook.py
(+36 files in other folders)
